tests/valid_inputs/global_int.cpp

int i;

int main() {
	i = 3;
	return i;
}
