tests/invalid_inputs/sema/continue_level_zero.cpp
int main() {
	break 0;
}
